--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "myfatoorah/laravel-package": "^2.2",
         "realrashid/sweet-alert": "^7.1"
     },
     "require-dev": {
